// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filter books 1`] = `
Object {
  "data": Object {
    "books": Array [
      Object {
        "id": "1",
        "private": false,
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`filter nullableBook 1`] = `
Object {
  "data": Object {
    "book1": Object {
      "id": "1",
      "private": false,
    },
    "book2": null,
    "notExistedBook": null,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`filter nullableBooks 1`] = `
Object {
  "data": Object {
    "nullableBooks": Array [
      Object {
        "id": "1",
        "private": false,
      },
      null,
      null,
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
